<?xml version="1.0" encoding="utf-8"?>
<!---/**************************************************************************
* @file    strings.xml
* @brief   List of strings to be displayed on the UI
*  Copyright (C) 2011-2014 Qualcomm Technologies, Inc.
*  All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
*  *****************************************************************************-->
<resources>
   <string name="app_name">ultrasound_settings</string>
   <!-- Ultrasound settings -->
   <string name="UltrasoundSettings">Ultrasound Debug Settings</string>
   <string name="tester_button">Tester</string>
   <string name="tester_settings_summary">Tester Display Options Settings</string>
   <string name="digital_pen_button">Digital Pen</string>
   <string name="digital_pen_settings_summary">Digital Pen Display Options Settings</string>
   <string name="gesture_button">Gesture</string>
   <string name="sync_gesture_button">Sync Gesture</string>
   <string name="gesture_settings_summary">Gesture Display Options Settings</string>
   <string name="sync_gesture_settings_summary">Sync Gesture Display Options Settings</string>
   <string name="hovering_button">Hovering</string>
   <string name="hovering_settings_summary">Hovering Display Options Settings</string>
   <string name="P2P_button">P2P</string>
   <string name="p2p_settings_summary">P2P Display Options Settings</string>
   <string name="recording_button">Recording</string>
   <string name="recording_settings_summary">Recording Display Hovering and Gesture recording option
   </string>
   <string name="proximity_button">Proximity</string>
   <string name="proximity_settings_summary">Proximity Display Options Settings</string>
   <string name="version_button">Version</string>
   <string name="start_on_boot_title">Start On Boot</string>
   <string name="choose_file_title">Daemon configuration file (.cfg)</string>
   <string name="choose_xml_file_title">Service configuration file (.xml)</string>
   <string-array name="files_list">
   </string-array>
   <string name="dsp_version_title">DSP Version</string>
   <string name="debug_title">Debug Mode</string>
   <string name="timestamp_title">Append Timestamp</string>
   <!-- Common settings -->
   <string name="frame_file_title">Frame File</string>
   <string name="frame_count_title">Frame Count</string>
   <!-- Tester settings -->
   <string name="TesterSettings">Tester Settings</string>
   <string name="tester_Status_title">Tester Status</string>
   <string name="frame_file_format_title">Frame File Format</string>
   <string-array name="files_format">
      <item>Raw</item>
      <item>Wav</item>
   </string-array>
   <!-- Digital Pen settings -->
   <string name="DigitalPenSettings">Digital Pen Settings</string>
   <string name="digital_pen_status_title">Pen Status</string>
   <string name="calib_title">Calibration Mode</string>
   <string name="coord_file_title">Coordinates file</string>
   <string name="coord_count_title">Coordinates count</string>
   <string name="timeout_title">Timeout</string>
   <!-- Gesture settings -->
   <string name="GestureSettings">Gesture Settings</string>
   <string name="gesture_status_title">Gesture Status</string>
   <!-- Sync Gesture settings -->
   <string name="SyncGestureSettings">Sync Gesture Settings</string>
   <string name="sync_gesture_status_title">Sync Gesture Status</string>
   <!-- P2P settings -->
   <string name="P2PSettings">P2P Settings</string>
   <string name="p2p_status_title">P2P Status</string>
   <string name="device_id_title">Device ID</string>
   <string name="pattern_type_title">Pattern Type</string>
   <!-- Hovering settings -->
   <string name="HoveringSettings">Hovering Settings</string>
   <string name="hovering_status_title">Hovering Status</string>
   <!-- Recording settings -->
   <string name="RecordingSettings">Recording Settings</string>
   <string name="recording_status_title">Recording Status</string>
   <!-- Proximity settings -->
   <string name="ProximitySettings">Proximity Settings</string>
   <string name="proximity_status_title">Proximity Status</string>
   <string-array name="test_type_array">
      <item>Gesture</item>
      <item>Hovering</item>
      <item>Proximity</item>
   </string-array>
   <string name="gesture_first_text">Ready?</string>
   <!-- Gesture Recording -->
   <string name="name_text">Name</string>
   <string name="location_text">Location</string>
   <string name="comments_text">Comments</string>
   <string name="type_text">Type</string>
   <string name="cfg_file_text">Cfg File</string>
   <string name="record_location_text">Recording Location</string>
   <string name="user_notice_text">Please make sure the selected cfg file suits your needs
   </string>
   <string name="button_text">Begin</string>
   <string name="clr_persist">Clear Persistent Data</string>
</resources>
