<?xml version="1.0" encoding="utf-8"?>
<!---/**************************************************************************
* @file    settings_preferences.xml
* @brief   Lists of preferences used in the ultrasoundSettings UI.
*  Copyright (C) 2011-2013 Qualcomm Technologies, Inc.
*  All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
*  *****************************************************************************-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory android:key="ultrasound_settings"
      android:title="@string/UltrasoundSettings">
      <Preference android:key="tester_settings" android:title="@string/tester_button"
         android:summary="@string/tester_settings_summary" />
      <Preference android:key="digital_pen_settings" android:title="@string/digital_pen_button"
         android:summary="@string/digital_pen_settings_summary" />
      <Preference android:key="gesture_settings" android:title="@string/gesture_button"
         android:summary="@string/gesture_settings_summary" />
      <Preference android:key="sync_gesture_settings" android:title="@string/sync_gesture_button"
         android:summary="@string/sync_gesture_settings_summary" />
      <Preference android:key="hovering_settings" android:title="@string/hovering_button"
         android:summary="@string/hovering_settings_summary" />
      <Preference android:key="p2p_settings" android:title="@string/P2P_button"
         android:summary="@string/p2p_settings_summary" />
      <Preference android:key="proximity_settings" android:title="@string/proximity_button"
         android:summary="@string/proximity_settings_summary" />
      <Preference android:key="recording_settings" android:title="@string/recording_button"
         android:summary="@string/recording_settings_summary" />
       <Preference android:key="version_settings" android:title="@string/version_button"
         android:summary="" />
   </PreferenceCategory>
</PreferenceScreen>
